--- a/Zap Ar - copia/Codigo ZapAr/css/sass/_carrito.scss
+++ b/Zap Ar - copia/Codigo ZapAr/css/sass/_carrito.scss
@@ -1,12 +1,13 @@
 /* style carrito */
 body {
-  background-color: $colorPrincipal;
+  
   main {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     width: 100vw;
     margin: 0;
+    background-color: $colorPrincipal;
     .zapas_unidad {
       display: flex;
       flex-flow: column wrap;
@@ -68,5 +69,8 @@ body {
         width: 40%;
       }
     }
+  }
+  .carrito_JS_container{
+    height: 100vh;
   }
 }
